--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- Site Metas -->
    <title>DigiPhar</title>
-   <meta name="keywords" content="Best Digital and Medical store">
+   <meta name="keywords" content="Best Digital and Medical store, COVID-19">
    <meta name="description" content="DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.">
    <meta name="author" content="Harshit">
    <!-- Site Icons -->
@@ -65,9 +65,8 @@
                   <div id="navbar" class="navbar-collapse collapse">
                      <ul class="nav navbar-nav">
                         <li><a class="active" href="index.html">Home</a></li>
-                        <li><a data-scroll href="categories.html">Categories</a></li>
+                        <li><a data-scroll href="categories.html">Products</a></li>
                         <li><a data-scroll href="#enquire">Enquire</a></li>
-						<li><a data-scroll href="#testimonials">Testimonials</a></li>
                         <li><a data-scroll href="#getintouch">Contact Us</a></li>
                      </ul>
                   </div>
@@ -120,7 +119,7 @@
             </div>
             <!-- end title -->
             <div class="row">
-               <div class="col-md-2 col-sm-3 col-xs-6">
+               <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
                         <a href="categories.html#medical-devices" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
@@ -130,7 +129,7 @@
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-2 col-sm-3 col-xs-6">
+               <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
                         <a href="categories.html#medical-consumables" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
@@ -140,7 +139,7 @@
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-2 col-sm-3 col-xs-6">
+               <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
                         <a href="categories.html#medical-aid" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
@@ -150,7 +149,7 @@
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-2 col-sm-3 col-xs-6">
+               <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
                         <a href="categories.html#hospital-furnitures" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
@@ -160,7 +159,7 @@
                   </div>
                   <!-- end service -->
                </div>
-               <div class="col-md-2 col-sm-3 col-xs-6">
+               <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
                         <a href="categories.html#medical-equipment" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
@@ -170,7 +169,7 @@
                   </div>
                   <!-- end service -->
                </div>
-			   <div class="col-md-2 col-sm-3 col-xs-6">
+			   <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
                      <div class="post-media wow fadeIn">
                         <a href="categories.html" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
@@ -235,53 +234,53 @@
 	  <div id="enquire" class="services wow fadeIn">
          <div class="container">
             <div class="row">
-               <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12">
-                  <div class="inner-services">
-                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="serv">
-                           <span class="icon-service"><img src="images/service-icon1.png" alt="#" /></span>
-                           <h4>PREMIUM FACILITIES</h4>
-                           <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="serv">
-                           <span class="icon-service"><img src="images/service-icon2.png" alt="#" /></span>
-                           <h4>LARGE LABORATORY</h4>
-                           <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="serv">
-                           <span class="icon-service"><img src="images/service-icon3.png" alt="#" /></span>
-                           <h4>DETAILED SPECIALIST</h4>
-                           <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="serv">
-                           <span class="icon-service"><img src="images/service-icon4.png" alt="#" /></span>
-                           <h4>CHILDREN CARE CENTER</h4>
-                           <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="serv">
-                           <span class="icon-service"><img src="images/service-icon5.png" alt="#" /></span>
-                           <h4>FINE INFRASTRUCTURE</h4>
-                           <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        </div>
-                     </div>
-                     <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-                        <div class="serv">
-                           <span class="icon-service"><img src="images/service-icon6.png" alt="#" /></span>
-                           <h4>ANYTIME BLOOD BANK</h4>
-                           <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
+               <!-- <div class="col-lg-8 col-md-8 col-sm-6 col-xs-12"> -->
+                  <!-- <div class="inner-services"> -->
+                     <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"> -->
+                        <!-- <div class="serv"> -->
+                           <!-- <span class="icon-service"><img src="images/service-icon1.png" alt="#" /></span> -->
+                           <!-- <h4>PREMIUM FACILITIES</h4> -->
+                           <!-- <p>Lorem Ipsum is simply dummy text of the printing.</p> -->
+                        <!-- </div> -->
+                     <!-- </div> -->
+                     <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"> -->
+                        <!-- <div class="serv"> -->
+                           <!-- <span class="icon-service"><img src="images/service-icon2.png" alt="#" /></span> -->
+                           <!-- <h4>LARGE LABORATORY</h4> -->
+                           <!-- <p>Lorem Ipsum is simply dummy text of the printing.</p> -->
+                        <!-- </div> -->
+                     <!-- </div> -->
+                     <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"> -->
+                        <!-- <div class="serv"> -->
+                           <!-- <span class="icon-service"><img src="images/service-icon3.png" alt="#" /></span> -->
+                           <!-- <h4>DETAILED SPECIALIST</h4> -->
+                           <!-- <p>Lorem Ipsum is simply dummy text of the printing.</p> -->
+                        <!-- </div> -->
+                     <!-- </div> -->
+                     <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"> -->
+                        <!-- <div class="serv"> -->
+                           <!-- <span class="icon-service"><img src="images/service-icon4.png" alt="#" /></span> -->
+                           <!-- <h4>CHILDREN CARE CENTER</h4> -->
+                           <!-- <p>Lorem Ipsum is simply dummy text of the printing.</p> -->
+                        <!-- </div> -->
+                     <!-- </div> -->
+                     <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"> -->
+                        <!-- <div class="serv"> -->
+                           <!-- <span class="icon-service"><img src="images/service-icon5.png" alt="#" /></span> -->
+                           <!-- <h4>FINE INFRASTRUCTURE</h4> -->
+                           <!-- <p>Lorem Ipsum is simply dummy text of the printing.</p> -->
+                        <!-- </div> -->
+                     <!-- </div> -->
+                     <!-- <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12"> -->
+                        <!-- <div class="serv"> -->
+                           <!-- <span class="icon-service"><img src="images/service-icon6.png" alt="#" /></span> -->
+                           <!-- <h4>ANYTIME BLOOD BANK</h4> -->
+                           <!-- <p>Lorem Ipsum is simply dummy text of the printing.</p> -->
+                        <!-- </div> -->
+                     <!-- </div> -->
+                  <!-- </div> -->
+               <!-- </div> -->
+               <div class="col-lg-6 col-md-offset-3 col-md-6 col-sm-offset-3 col-sm-6 col-xs-12">
                   <div class="appointment-form">
                      <h3><span>+</span> Enquiry Form</h3>
                      <div class="form">
@@ -339,85 +338,7 @@
       </div>
       <!-- end section -->
 
-	  
-      <div id="testimonials" class="section wb wow fadeIn">
-         <div class="container">
-            <div class="heading">
-               <span class="icon-logo"><img src="images/icon-logo.png" alt="#"></span>
-               <h2>Testimonials</h2>
-            </div>
-            <!-- end title -->
-            <div class="row">
-               <div class="col-md-6 col-sm-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                  <div class="testimonial clearfix">
-                     <div class="desc">
-                        <h3><i class="fa fa-quote-left"></i> The amazing clinic! Wonderful Support!</h3>
-                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                     </div>
-                     <div class="testi-meta">
-                        <img src="images/testi_01.png" alt="" class="img-responsive alignleft">
-                        <h4>James Fernando <small>- Manager of Racer</small></h4>
-                     </div>
-                     <!-- end testi-meta -->
-                  </div>
-                  <!-- end testimonial -->
-               </div>
-               <!-- end col -->
-               <div class="col-md-6 col-sm-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
-                  <div class="testimonial clearfix">
-                     <div class="desc">
-                        <h3><i class="fa fa-quote-left"></i> Thanks for Help us!</h3>
-                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                     </div>
-                     <div class="testi-meta">
-                        <img src="images/testi_02.png" alt="" class="img-responsive alignleft">
-                        <h4>Andrew Atkinson <small>- Life Manager</small></h4>
-                     </div>
-                     <!-- end testi-meta -->
-                  </div>
-                  <!-- end testimonial -->
-               </div>
-               <!-- end col -->
-            </div>
-            <!-- end row -->
-            <hr class="invis">
-            <div class="row">
-               <div class="col-md-6 col-sm-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
-                  <div class="testimonial clearfix">
-                     <div class="desc">
-                        <h3><i class="fa fa-quote-left"></i> The amazing clinic! Wonderful Support!</h3>
-                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                     </div>
-                     <div class="testi-meta">
-                        <img src="images/testi_03.png" alt="" class="img-responsive alignleft">
-                        <h4>Amanda DOE <small>- Manager of Racer</small></h4>
-                     </div>
-                     <!-- end testi-meta -->
-                  </div>
-                  <!-- end testimonial -->
-               </div>
-               <!-- end col -->
-               <div class="col-md-6 col-sm-12 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.8s">
-                  <div class="testimonial clearfix">
-                     <div class="desc">
-                        <h3><i class="fa fa-quote-left"></i> Thanks for Help us!</h3>
-                        <p class="lead">They have got my project on time with the competition with a sed highly skilled, and experienced & professional team.</p>
-                     </div>
-                     <div class="testi-meta">
-                        <img src="images/testi_01.png" alt="" class="img-responsive alignleft">
-                        <h4>Martin Johnson <small>- Founder of Goosilo</small></h4>
-                     </div>
-                     <!-- end testi-meta -->
-                  </div>
-                  <!-- end testimonial -->
-               </div>
-               <!-- end col -->
-            </div>
-            <!-- end row -->
-         </div>
-         <!-- end container -->
-      </div>
-      <!-- end section -->
+	 
 	  
       <div id="getintouch" class="section wb wow fadeIn" style="padding-bottom:0;">
          <div class="container">
@@ -478,7 +399,7 @@
                <div class="col-md-4">
                   <div class="logo padding">
                      <a href=""><img src="images/logo.png" alt=""></a>
-                     <p>Locavore pork belly scen ester pine est chill wave microdosing pop uple itarian cliche artisan.</p>
+                     <p>DigiPhar is the best in supplying best grade medical equipments, and is originated in India. Special Products for COVID-19.</p>
                   </div>
                </div>
                <div class="col-md-4">
