--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
    <meta name="viewport" content="initial-scale=1, maximum-scale=1">
    <!-- Site Metas -->
    <title>DigiPhar</title>
-   <meta name="keywords" content="Best Digital and Medical store, COVID-19">
+   <meta name="keywords" content="digi, phar, digiphar, in, india, covid, 19, covid-19, corona, virus, medical, health, care, digital, suit, precautions, skrn, inc, buy, products, sanitiser, branded, equipment, all, hospital, lockdown">
    <meta name="description" content="DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.">
    <meta name="author" content="Harshit">
    <!-- Site Icons -->
