--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                <div class="col-md-4">
                   <div class="logo padding">
                      <a href=""><img src="images/logo.png" alt=""></a>
-                     <p>DigiPhar is the best in supplying best grade medical equipments, and is originated in India. Special Products for COVID-19.</p>
+                     <p>DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.</p>
                   </div>
                </div>
                <div class="col-md-4">
