--- a/categories.html
+++ b/categories.html
@@ -71,9 +71,9 @@
                      <ul class="nav navbar-nav">
                         <li><a href="index.html">Home</a></li>
                         <li><a data-scroll class="active" href="categories.html">Categories</a></li>
-                        <li><a data-scroll href="#enquire">Enquire</a></li>
-						<li><a data-scroll href="#testimonials">Testimonials</a></li>
-                        <li><a data-scroll href="#getintouch">Contact Us</a></li>
+                        <li><a data-scroll href="index.html#enquire">Enquire</a></li>
+						<li><a data-scroll href="index.html#testimonials">Testimonials</a></li>
+                        <li><a data-scroll href="index.html#getintouch">Contact Us</a></li>
                      </ul>
                   </div>
                </nav>
