--- a/categories.html
+++ b/categories.html
@@ -72,7 +72,7 @@
                         <li><a href="index.html">Home</a></li>
                         <li><a data-scroll class="active" href="categories.html">Categories</a></li>
                         <li><a data-scroll href="index.html#enquire">Enquire</a></li>
-						<li><a data-scroll href="index.html#testimonials">Testimonials</a></li>
+						<!-- <li><a data-scroll href="index.html#testimonials">Testimonials</a></li> -->
                         <li><a data-scroll href="index.html#getintouch">Contact Us</a></li>
                      </ul>
                   </div>
@@ -163,6 +163,9 @@
 	
 	<div class="section wow fadeIn">
          <div class="container">
+			<div class="heading">
+               <h2>All Products</h2>
+            </div>
             <!-- end row -->
             <div class="row">
                <div class="col-md-2 col-sm-4 col-xs-6">
@@ -302,15 +305,15 @@
                <div class="col-md-4">
                   <div class="logo padding">
                      <a href=""><img src="images/logo.png" alt=""></a>
-                     <p>Locavore pork belly scen ester pine est chill wave microdosing pop uple itarian cliche artisan.</p>
+                     <p>DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.</p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="footer-info padding">
                      <h3>CONTACT US</h3>
                      <p><i class="fa fa-map-marker" aria-hidden="true"></i> Delhi, India</p>
-                     <p><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</p>
-                     <p><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</p>
+                     <p><a href="mailto:digiphar.inc@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</a></p>
+                     <p><a href="tel:9810034369"><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</a></p>
                   </div>
                </div>
                <div class="col-md-4">
