--- a/index.html
+++ b/index.html
@@ -284,40 +284,43 @@
                   <div class="appointment-form">
                      <h3><span>+</span> Enquiry Form</h3>
                      <div class="form">
-                        <form method="post">
+						<form action="https://submit.jotform.com/submit/201401474094043/" method="post" name="form_201401474094043" id="201401474094043" accept-charset="utf-8">
+							<input type="hidden" name="formID" value="201401474094043" />
+							<input type="hidden" id="JWTContainer" value="" />
+							<input type="hidden" id="cardinalOrderNumber" value="" />
                            <fieldset>
                               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                  <div class="row">
                                     <div class="form-group">
-                                       <input type="text" placeholder="Your Name"  />
+                                       <input type="text" name="q3_type" required placeholder="Your Name"  />
                                     </div>
                                  </div>
                               </div>
                               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                  <div class="row">
                                     <div class="form-group">
-                                       <input type="email" placeholder="Email Address"/>
+                                       <input type="email" name="q4_email" required placeholder="Email Address"/>
                                     </div>
                                  </div>
                               </div>
 							  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                  <div class="row">
                                     <div class="form-group">
-                                       <input type="tel" placeholder="Phone Number"/>
+                                       <input type="tel" name="q5_phoneNumber" required placeholder="Phone Number"/>
                                     </div>
                                  </div>
                               </div>
 							  <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                  <div class="row">
                                     <div class="form-group">
-                                       <input type="text" placeholder="Location"/>
+                                       <input type="text" name="q6_location" placeholder="Location"/>
                                     </div>
                                  </div>
                               </div>
                               <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                                  <div class="row">
                                     <div class="form-group">
-                                       <textarea rows="4" id="textarea_message" class="form-control" placeholder="Your Requirements..."></textarea>
+                                       <textarea required name="q7_requirements" rows="4" id="textarea_message" class="form-control" placeholder="Your Requirements..."></textarea>
                                     </div>
                                  </div>
                               </div>
@@ -348,22 +351,24 @@
          </div>
          <div class="contact-section">
             <div class="form-contant">
-			   <form class="jotform-form" action="https://submit.jotform.com/submit/201322036755043/" method="post" name="form_201322036755043" id="201322036755043" accept-charset="utf-8" autocomplete="on">
-			      <input type="hidden" name="formID" value="201322036755043" /> <input type="hidden" id="JWTContainer" value="" /> <input type="hidden" id="cardinalOrderNumber" value="" /> 
+			   <form class="jotform-form" action="https://submit.jotform.com/submit/201401541229038/" method="post" name="form_201401541229038" id="201401541229038" accept-charset="utf-8" autocomplete="on">
+				<input type="hidden" name="formID" value="201401541229038" />
+				<input type="hidden" id="JWTContainer" value="" />
+				<input type="hidden" id="cardinalOrderNumber" value="" />
                   <div class="row">
                      <div class="col-md-6">
                         <div class="form-group in_name">
-						   <input type="text" id="input_1" name="q1_typeA" data-type="input-textbox" class="form-control" style="color:#e4e4e4;" data-component="textbox" aria-labelledby="label_1" placeholder="Name" required="required" >
+						   <input type="text" id="input_1" name="q3_name" data-type="input-textbox" class="form-control" style="color:#e4e4e4;" data-component="textbox" aria-labelledby="label_1" placeholder="Name" required="required" >
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div class="form-group in_email">
-						   <input type="text" id="input_2" name="q2_typeA2" data-type="input-textbox" style="color:#e4e4e4;" class="form-control" data-component="textbox" placeholder="E-mail" aria-labelledby="label_2" required="required" >
+						   <input type="text" id="input_2" name="q4_email" data-type="input-textbox" style="color:#e4e4e4;" class="form-control" data-component="textbox" placeholder="E-mail" aria-labelledby="label_2" required="required" >
                         </div>
                      </div>
                      <div class="col-md-6">
                         <div class="form-group in_email">
-						<input type="text" id="input_3" name="q3_typeA3" style="color:#e4e4e4;" data-type="input-textbox" class="form-control" data-component="textbox" placeholder="Phone" aria-labelledby="label_3" >
+						<input type="text" id="input_3" name="q5_phone" style="color:#e4e4e4;" data-type="input-textbox" class="form-control" data-component="textbox" placeholder="Phone" aria-labelledby="label_3" >
                         </div>
                      </div>
                      <div class="col-md-6">
