Contact Us fixed

--- a/categories.html
+++ b/categories.html
@@ -319,24 +319,10 @@
 					</div>
 					<!-- end container -->
 				</div>
-				<div id="medical-equipment" class="all section wow fadeIn">
+				<div id="medical-equipment medical-devices medical-consumables medical-aids hospital-furnitures" class="section wow fadeIn">
 					<div class="container">
 						<div class="heading">
-							<h2>Medical Equipment</h2>
-						</div>
-						<!-- end row -->
-						<div class="row">
-							<p class="center info">Products Under this Category are not Available yet!</p>
-							<p class="center">Please check back later!</p>
-						</div>
-						<!-- end row -->
-					</div>
-					<!-- end container -->
-				</div>
-				<div id="medical-devices" class="all section wow fadeIn">
-					<div class="container">
-						<div class="heading">
-							<h2>Medical Devices</h2>
+							<h2>Category Not Found</h2>
 						</div>
 						<!-- end row -->
 						<div class="row">
