--- a/categories.html
+++ b/categories.html
@@ -319,7 +319,7 @@
 					</div>
 					<!-- end container -->
 				</div>
-				<div id="medical-equipment medical-devices medical-consumables medical-aids hospital-furnitures" class="section wow fadeIn">
+				<div id="medical-equipment medical-devices medical-consumables medical-aids hospital-furnitures" class="notfound section wow fadeIn">
 					<div class="container">
 						<div class="heading">
 							<h2>Category Not Found</h2>
@@ -417,8 +417,11 @@
 		<script type="text/javascript">
 			$(function(){
 				var activediv = $(location).attr('hash');
-				if(!activediv == '')
+				if(activediv != '')
 					go(activediv);
+				else{
+					$('.notfound').hide();
+				}
 			})
 			$(document).ready(function () {
 			    $("#sidebar").mCustomScrollbar({
