Html edit and ready for google ping

--- a/categories.html
+++ b/categories.html
@@ -85,7 +85,7 @@
 								<div class="header-info">
 									<div class="info-inner">
 										<span class="icontop"><img src="images/phone-icon.png" alt="#"></span>
-										<span class="iconcont"><a href="tel:9810034369">981 003 4369</a></span>	
+										<span class="iconcont"><a href="tel:+919810034369">(+91) 981 003 4369</a></span>	
 									</div>
 									<div class="info-inner">
 										<span class="icontop"><i class="fa fa-envelope" aria-hidden="true"></i></span>
@@ -339,7 +339,7 @@
 							<div class="col-md-4">
 								<div class="logo padding">
 									<a href=""><img src="images/logo.png" alt=""></a>
-									<p>DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.</p>
+									<p>DigiPhar is the best in supplying high grade medical equipments, originated and manufactured in India. Special Products for corona virus(says COVID-19)</p>
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -347,7 +347,7 @@
 									<h3>CONTACT US</h3>
 									<p><i class="fa fa-map-marker" aria-hidden="true"></i> Delhi, India</p>
 									<p><a href="mailto:digiphar.inc@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</a></p>
-									<p><a href="tel:9810034369"><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</a></p>
+									<p><a href="tel:+919810034369"><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</a></p>
 								</div>
 							</div>
 							<div class="col-md-4">
