--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <!-- Site Metas -->
    <title>DigiPhar</title>
    <meta name="keywords" content="digi, phar, digiphar, in, india, covid, 19, covid-19, corona, virus, medical, health, care, digital, suit, precautions, skrn, inc, buy, products, sanitiser, branded, equipment, all, hospital, lockdown">
-   <meta name="description" content="DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.">
+   <meta name="description" content="DigiPhar is the best in supplying high grade medical equipments, originated and manufactured in India. Special Products for corona virus(says COVID-19)">
    <meta name="author" content="Harshit">
    <!-- Site Icons -->
    <link rel="shortcut icon" href="images/fevicon.ico.png" type="image/x-icon" />
@@ -45,7 +45,7 @@
                   <div class="header-info">
                      <div class="info-inner">
                         <span class="icontop"><img src="images/phone-icon.png" alt="#"></span>
-                        <span class="iconcont"><a href="tel:9810034369">981 003 4369</a></span>	
+                        <span class="iconcont"><a href="tel:+919810034369">(+91) 981 003 4369</a></span>	
                      </div>
                      <div class="info-inner">
                         <span class="icontop"><i class="fa fa-envelope" aria-hidden="true"></i></span>
@@ -194,14 +194,17 @@
 	  <div class="section pr wow fadeIn" style="background-image:url('images/price-bg.png'); background-attachment:fixed;">
          <div class="container brnd">
 			<marquee onMouseOver="this.stop();" onMouseOut="this.start();" behavior="alternate" direction="left">
-				<img src="images/brands/3m.png">
-				<img src="images/brands/dr-morpen.png">
-				<img src="images/brands/parle.png">
-				<img src="images/brands/venus.png">
-				<img src="images/brands/oscar.png">
-				<img src="images/brands/modi.png">
-				<img src="images/brands/herbal-tree.png">
-				<img src="images/brands/hymark.png">
+				<img alt="3M" src="images/brands/3m.png">
+				<img alt="Dr. Morpen" src="images/brands/dr-morpen.png">
+				<img alt="Parle" src="images/brands/parle.png">
+				<img alt="Venus" src="images/brands/venus.png">
+				<img alt="Trust" src="images/brands/trust.png">
+				<img alt="Oscar" src="images/brands/oscar.png">
+				<img alt="Modi" src="images/brands/modi.png">
+				<img alt="Yash" src="images/brands/yash.png">
+				<img alt="Prima" src="images/brands/prima.png">
+				<img alt="Herbal Tree" src="images/brands/herbal-tree.png">
+				<img alt="Hymark" src="images/brands/hymark.png">
 			</marquee>
          </div>
       </div>
@@ -218,6 +221,8 @@
 					<img class="col-md-2" src="images/certifications/ce.png" alt="CE-Certified">
 					<img class="col-md-2" src="images/certifications/iso.png" alt="ISO-Certified">
 					<img class="col-md-2" src="images/certifications/who.png" alt="WHO-GMP Certified">
+					<img class="col-md-2" src="images/certifications/icmr.png" alt="ICMR">
+					<img class="col-md-2" src="images/certifications/FDA.png" alt="FDA">
 					<img class="col-md-2" src="images/certifications/drdo.png" alt="DRDO Tested">
 					<img class="col-md-2" src="images/certifications/sitra.png" alt="Sitra Tested">
 				<!-- </marquee> -->
@@ -404,7 +409,7 @@
                <div class="col-md-4">
                   <div class="logo padding">
                      <a href=""><img src="images/logo.png" alt=""></a>
-                     <p>DigiPhar is the best in supplying high grade medical equipments, and is originated in India. Special Products for COVID-19.</p>
+                     <p>DigiPhar is the best in supplying high grade medical equipments, originated and manufactured in India. Special Products for corona virus(says COVID-19)</p>
                   </div>
                </div>
                <div class="col-md-4">
@@ -412,7 +417,7 @@
                      <h3>CONTACT US</h3>
                      <p><i class="fa fa-map-marker" aria-hidden="true"></i> Delhi, India</p>
                      <p><a href="mailto:digiphar.inc@gmail.com"><i class="fa fa-paper-plane" aria-hidden="true"></i> digiphar.inc@gmail.com</a></p>
-                     <p><a href="tel:9810034369"><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</a></p>
+                     <p><a href="tel:+919810034369"><i class="fa fa-phone" aria-hidden="true"></i> (+91) 981 003 4369</a></p>
                   </div>
                </div>
                <div class="col-md-4">
