--- a/categories.html
+++ b/categories.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="viewport" content="initial-scale=1, maximum-scale=1">
 	<!-- Site Metas -->
-	<title>DigiPhar</title>
+	<title>Categories - DigiPhar</title>
 	<meta name="keywords" content="digi, phar, digiphar, in, india, covid, 19, covid-19, corona, virus, medical, health, care, digital, suit, precautions, skrn, inc, buy, products, sanitiser, branded, equipment, all, hospital, lockdown">
 	<meta name="description" content="Best in supplying medical equipments. See All Products. Special Products for COVID-19.">
 	<meta name="author" content="Harshit">
