--- a/index.html
+++ b/index.html
@@ -121,61 +121,67 @@
             <div class="row">
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
+					<a href="categories.html#medical-devices">
                      <div class="post-media wow fadeIn">
-                        <a href="categories.html#medical-devices" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="images/categories/medical-devices.png" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;">Medical Devices</h3>
+					 </a>
                   </div>
                   <!-- end service -->
                </div>
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
+					<a href="categories.html#medical-consumables">
                      <div class="post-media wow fadeIn">
-                        <a href="categories.html#medical-consumables" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="images/categories/medical-consumables.png" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;">Medical Consumables</h3>
+					 </a>
                   </div>
                   <!-- end service -->
                </div>
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
+				  <a href="categories.html#medical-aid">
                      <div class="post-media wow fadeIn">
-                        <a href="categories.html#medical-aid" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="images/categories/medical-aid.png" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;">Medical Aids</h3>
+					 </a>
                   </div>
                   <!-- end service -->
                </div>
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
+				  <a href="categories.html#hospital-furnitures">
                      <div class="post-media wow fadeIn">
-                        <a href="categories.html#hospital-furnitures" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="images/categories/hospital-furnitures.png" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;">Hospital Furnitures</h3>
+					 </a>
                   </div>
                   <!-- end service -->
                </div>
                <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
+				  <a href="categories.html#medical-equipment">
                      <div class="post-media wow fadeIn">
-                        <a href="categories.html#medical-equipment" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="images/categories/medical-equipment.png" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;">Medical Equipments</h3>
+					 </a>
                   </div>
                   <!-- end service -->
                </div>
 			   <div class="col-md-2 col-sm-3 col-xs-4">
                   <div class="service-widget">
+				  <a href="categories.html">
                      <div class="post-media wow fadeIn">
-                        <a href="categories.html" class="hoverbutton global-radius"><i class="flaticon-unlink"></i></a>
                         <img src="images/categories/all.jpg" alt="" class="img-responsive">
                      </div>
                      <h3 style="height:60px;"><a href="categories.html"><button class="btn btn-warning">View All</button></a></h3>
+					 </a>
                   </div>
                   <!-- end service -->
                </div>
